--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
 											</li>
 										</ul>
 									</li>
-									</li>
 									<li>
 										<a href="#rentals_sales" data-toggle="dropdown" class="dropdown-toggle">RENTALS <span class="caret"></span></a>
 										<ul>
@@ -181,7 +180,6 @@
 				</div>
 			</div><!-- End Slides Container -->
 			<div class="clearfix"></div>
-		</div>
 		</div><!-- End JSSOR Slider -->
 
 		<!-- Start aboutus -->
@@ -470,7 +468,7 @@
 								<h4>20000 ANSI Lumens. HD 1080p. Long throw, up to 100 feet wide</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							20000 ANSI Lumens
 						</div>
 					</li>
@@ -484,7 +482,7 @@
 								<h4>10000 ANSI Lumens. HD 1080p. Long throw up to 45 feet wide.</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							10000 ANSI Lumens
 						</div>
 					</li>
@@ -498,7 +496,7 @@
 								<h4>8000 ANSI Lumens. HD 1080p. Long throw up to 30 feet wide.</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							8000 ANSI Lumens
 						</div>
 					</li>
@@ -512,7 +510,7 @@
 								<h4>5000 ANSI Lumens. HD 1080p. Long throw up to 20 feet wide.</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							5000 ANSI Lumens
 						</div>
 					</li>
@@ -526,7 +524,7 @@
 								<h4>4500 ANSI Lumens. HD 1080p. Short throw up to 15 feet wide</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							4500 ANSI Lumens
 						</div>
 					</li>
@@ -550,7 +548,7 @@
 					</div>
 				</div>
 				<div class="text-center">
-					<div class=service-item-header>
+					<div class="service-item-header">
 						Seattle AV Services will light up any event from school house auctions and houses of worship to conferences, seminars, product launches and conventions.
 					</div>
 				</div>
@@ -565,7 +563,7 @@
 								<h4>WITH CONTROLLERS</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							Par 64's, Bars & Controllers
 						</div>
 					</li>
@@ -579,7 +577,7 @@
 								<h4>ALL SIZES AND COLORS</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							Hanging LED Par 36
 						</div>
 					</li>
@@ -593,7 +591,7 @@
 								<h4>ALL COLORS AND SIZES</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							Floor standing Par 36 up light
 						</div>
 					</li>
@@ -607,7 +605,7 @@
 								<h4>LIGHTS</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							Customized packages
 						</div>
 					</li>
@@ -621,7 +619,7 @@
 								<h4>PROJECTION LIGHTS</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							GOBO Light Projection
 						</div>
 					</li>
@@ -642,7 +640,7 @@
 					</div>
 				</div>
 				<div class="text-center">
-					<div class=service-item-header>
+					<div class="service-item-header">
 						Seattle AV Services has video monitors for: walls, floor displays, table tops and rack mounts.
 					</div>
 				</div>
@@ -658,7 +656,7 @@
 								<h4>VIDEO DISPLAY</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							Floor standing video walls
 						</div>
 					</li>
@@ -673,7 +671,7 @@
 								<h4>VIDEO SCREEN MOUNTS</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							Floor standing video frames
 						</div>
 					</li>
@@ -688,7 +686,7 @@
 								<h4>VIDEO MONITORS</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							Floor and Console monitors
 						</div>
 					</li>
@@ -702,7 +700,7 @@
 								<h4>VIDEO MONITORS</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							Rack mounted video monitors
 						</div>
 					</li>
@@ -716,7 +714,7 @@
 								<h4>VIDEO MONITORS</h4>
 							</div>
 						</div> </a>
-						<div align="left">
+						<div class="go-left">
 							Table-top video monitors
 						</div>
 					</li>
@@ -740,7 +738,7 @@
 					</div>
 				</div>
 				<div class="text-center">
-					<div class=service-item-header>
+					<div class="service-item-header">
 						Professional sound reinforcement: small rooms, stages, conventions, auctions, concerts
 					</div>
 					<ul class="project-gallery" >
@@ -754,10 +752,9 @@
 									<h4>SOUND BOARDS</h4>
 								</div>
 							</div></a>
-							<div align="left">
+							<div class="go-left">
 								Mixing consoles
 							</div>
-							<
 						</li>
 						<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-sound" >
 							<a class="colorbox" href="images/s4.jpg" data-group="sound">
@@ -769,7 +766,7 @@
 									<h4>SOUND SYSTEM</h4>
 								</div>
 							</div> </a>
-							<div align="left">
+							<div class="go-left">
 								Club systems
 							</div>
 						</li>
@@ -783,7 +780,7 @@
 									<h4>PA SYSTEM</h4>
 								</div>
 							</div> </a>
-							<div align="left">
+							<div class="go-left">
 								Public adress systems
 							</div>
 						</li>
@@ -797,7 +794,7 @@
 									<h4>SOUND SYSTEM</h4>
 								</div>
 							</div> </a>
-							<div align="left">
+							<div class="go-left">
 								Live sound systems
 							</div>
 						</li>
@@ -811,13 +808,13 @@
 									<h4>EDITING WORKSTATION</h4>
 								</div>
 							</div> </a>
-								<div align="left">
+							<div class="go-left">
 								Mobile recording workstations
 							</div>
 						</li>
 					</ul>
 				</div>
-
+			</div>
 			</div><!-- End Staging / Drapery -->
 
 			<!-- Staging / Drapery -->
@@ -834,7 +831,7 @@
 					</div>
 
 					<div class="text-center">
-						<div class=service-item-header>
+						<div class="service-item-header">
 							Pipes, Drapes, Staging and Booths
 						</div>
 
@@ -849,8 +846,9 @@
 										<h4>STAGE / EVENT DESIGN</h4>
 									</div>
 								</div> </a>
-								<div align="left">3D software planning tools
-							</div>
+								<div class="go-left">
+									3D software planning tools
+								</div>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 								<a class="colorbox" href="images/dp3.jpg" data-group="stage">
@@ -862,9 +860,9 @@
 										<h4>WITH DRAPES AND STAIRS</h4>
 									</div>
 								</div> </a>
-							<div align="left">
-								Staging, catwalks, drapes
-							</div>
+								<div class="go-left">
+									Staging, catwalks, drapes
+								</div>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 								<a class="colorbox" href="images/dp1.jpg" data-group="stage">
@@ -876,9 +874,9 @@
 										<h4>SELF CONTAINED</h4>
 									</div>
 								</div> </a>
-							<div align="left">
-								Live performance package
-							</div>
+								<div class="go-left">
+									Live performance package
+								</div>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 								<a class="colorbox" href="images/dp4.jpg" data-group="stage">
@@ -890,8 +888,9 @@
 										<h4>ALMOST ANY SIZE</h4>
 									</div>
 								</div> </a>
-									<div align="left">Steel decking and staging
-							</div>
+								<div class="go-left">
+									Steel decking and staging
+								</div>
 							</li>
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-stage" >
 								<a class="colorbox" href="images/dp2.jpg" data-group="stage">
@@ -903,12 +902,13 @@
 										<h4>FOR BOOTHS AND TABLES</h4>
 									</div>
 								</div> </a>
-									<div align="left">Pipes, drapes, booths
-							</div>
+								<div class="go-left">
+									Pipes, drapes, booths
+								</div>
 							</li>
 						</ul>
 					</div>
-
+</div>
 				</div><!-- End Staging / Drapery -->
 
 				<!-- Gallery -->
@@ -924,7 +924,7 @@
 							</div>
 						</div>
 						<div class="text-center">
-							<div class=service-item-header>
+							<div class="service-item-header">
 								Look through our gallery of past events. Float over the images for information, then click to enlarge.
 							</div>
 							<ul class="project-gallery" >
@@ -1044,7 +1044,7 @@
 								</li>
 							</ul>
 						</div>
-
+</div>
 					</div><!-- End Gallery -->
 
 					<!-- Contact -->
